--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <Button id="open">Open Modal</Button>
+    <div class="modal hidden">
+        <div class="modal_overlay"></div>
+        <div class="modal_content">
+            <h1>I,m a modal!</h1>
+            <button id="close">X</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
